--- a/TTogilgi/app/src/main/res/layout/activity_password_change.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_password_change.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/currentPasswordEdit"
@@ -42,22 +42,35 @@
 
     <Button
         android:id="@+id/changeRequestBtn"
-        android:layout_width="110dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="변경신청"
+        app:layout_constraintEnd_toStartOf="@+id/centerGuideline"
         app:layout_constraintStart_toStartOf="@+id/newPassword2Edit"
         app:layout_constraintTop_toBottomOf="@+id/newPassword2Edit" />
 
     <Button
         android:id="@+id/goBackBtn"
-        android:layout_width="110dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_marginTop="32dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="돌아가기"
         app:layout_constraintEnd_toEndOf="@+id/newPassword2Edit"
+        app:layout_constraintStart_toStartOf="@+id/centerGuideline"
         app:layout_constraintTop_toBottomOf="@+id/newPassword2Edit" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/centerGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
