로그아웃 다이얼로그 -> 커스텀 다이얼로그로 변경

--- a/TTogilgi/app/src/main/res/values/colors.xml
+++ b/TTogilgi/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="oliveColor">#808000</color>
     <color name="dimGreyColor">#696969</color>
     <color name="liteGreyColor">#909090</color>
+    <color name="redColor">#FFFF0000</color>
+    <color name="blackColor">#FF000000</color>
+    <color name="blueColor">#FF0000FF</color>
 </resources>
