--- a/TTogilgi/app/src/main/res/layout/activity_detail.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_detail.xml
@@ -32,12 +32,15 @@
     <TextView
         android:id="@+id/emotionText"
         style="@style/Edit_And_Detail_Title_TextView_style"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:text="감정에 대한 글"
         app:layout_constraintBottom_toBottomOf="@+id/emotionImage"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/emotionImage"
         app:layout_constraintTop_toTopOf="@+id/emotionImage" />
 
