--- a/TTogilgi/app/src/main/res/values/colors.xml
+++ b/TTogilgi/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F3E5F5</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#FDF5E6</color>
+    <color name="colorPrimaryDark">#FFEBCD</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="brownColor">#8B4513</color>
     <color name="liteBrownColor">#DEB887</color>
