1. drawerLayout 디자인 변경 2. 인트로 화면 디자인 변경 3. 일기 상세, 작성 화면 배경 변경

--- a/TTogilgi/app/src/main/res/layout/activity_edit.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_edit.xml
@@ -4,13 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/diary_detail_background"
+    android:background="@drawable/diary_detail_background3"
     tools:context=".diary.diaryDetail.EditActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/editToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +43,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
