--- a/TTogilgi/app/src/main/res/values/styles.xml
+++ b/TTogilgi/app/src/main/res/values/styles.xml
@@ -60,6 +60,7 @@
         <item name="android:maxLines">100</item>
         <item name="android:ellipsize">end</item>
         <item name="android:text"> Contents </item>
+        <item name="android:background">@color/colorPrimary</item>
     </style>
 
     <style name="Edit_And_Detail_Title_TextView_style">
