1. 감정 그래프 감정 표시 오류 수정 -> 다른 감정과 연결된 코드 수정 2. 디자인 수정 3. 커서 색상 변경

--- a/TTogilgi/app/src/main/res/layout/activity_intro.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_intro.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="45dp"
         android:layout_marginBottom="400dp"
         android:fontFamily="@font/nanumpen"
-        android:text="똑일기"
+        android:text="마음의 날씨"
         android:textSize="40dp"
         android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
