--- a/TTogilgi/app/src/main/res/values/styles.xml
+++ b/TTogilgi/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/orangeColor</item>
     </style>
 
     <style name="Date_TextView_style">
@@ -60,7 +60,6 @@
         <item name="android:maxLines">100</item>
         <item name="android:ellipsize">end</item>
         <item name="android:text"> Contents </item>
-        <item name="android:background">@color/colorPrimary</item>
     </style>
 
     <style name="Edit_And_Detail_Title_TextView_style">
