1. 앱 서랍에 날씨 설명 보기 추가 2. 일기 아이템과 일기 상세, 수정 화면 배경 이미지 비율 수정

--- a/TTogilgi/app/src/main/res/menu/navi_menu.xml
+++ b/TTogilgi/app/src/main/res/menu/navi_menu.xml
@@ -4,6 +4,10 @@
     <group android:checkableBehavior="single" >
         <item
             android:checkable="false"
+            android:id="@+id/nav_weather_description"
+            android:title="날씨 설명 보기" />
+        <item
+            android:checkable="false"
             android:id="@+id/nav_username_edit"
             android:title="닉네임 변경" />
         <item
