1. 감정 그래프 컬러 변경 2. 전체적인 폰트 변경 3. 로그인 화면 -> 비밀번호 찾기 텍스트 추가

--- a/TTogilgi/app/src/main/res/layout/activity_edit.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_edit.xml
@@ -27,7 +27,7 @@
         style="@style/Edit_And_Detail_Title_TextView_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:text="오늘의 이야기를 들려주세요!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginBottom="60dp"
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="감정 분석 중입니다"
-        android:fontFamily="@font/nanumbarunpenb"
+        android:fontFamily="@font/nanummyeongjo"
         android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/brownColor"
