--- a/TTogilgi/app/src/main/res/layout/activity_detail.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_detail.xml
@@ -24,11 +24,11 @@
 
     <ImageView
         android:id="@+id/emotionImage"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
         app:srcCompat="@drawable/ic_notebook" />
@@ -38,8 +38,8 @@
         style="@style/Edit_And_Detail_Title_TextView_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:text="감정에 대한 글"
         app:layout_constraintBottom_toBottomOf="@+id/emotionImage"
         app:layout_constraintStart_toEndOf="@+id/emotionImage"
@@ -52,7 +52,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginBottom="60dp"
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="일기를 불러오는 중입니다"
-        android:fontFamily="@font/nanumbarunpenb"
+        android:fontFamily="@font/nanummyeongjo"
         android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/brownColor"
