--- a/TTogilgi/app/src/main/res/layout/activity_intro.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_intro.xml
@@ -8,11 +8,11 @@
     tools:context=".IntroActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/IntroText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="45dp"
-        android:layout_marginRight="45dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:layout_marginBottom="400dp"
         android:fontFamily="@font/nanumpen"
         android:text="마음의 날씨"
