--- a/TTogilgi/app/src/main/res/layout/activity_login.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
         android:ems="10"
         android:hint="닉네임"
         android:inputType="textPersonName"
+        android:fontFamily="@font/nanummyeongjo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,6 +26,7 @@
         android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="비밀번호"
+        android:fontFamily="@font/nanummyeongjo"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +41,7 @@
         android:layout_marginRight="4dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="로그인"
+        android:fontFamily="@font/nanummyeongjo"
         app:layout_constraintEnd_toStartOf="@+id/centerGuideline"
         app:layout_constraintStart_toStartOf="@+id/passwordEdit"
         app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />
@@ -52,6 +55,7 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="회원가입"
+        android:fontFamily="@font/nanummyeongjo"
         app:layout_constraintEnd_toEndOf="@+id/passwordEdit"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/centerGuideline"
@@ -63,6 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="자동 로그인"
+        android:fontFamily="@font/nanummyeongjo"
         app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="@+id/loginBtn"
@@ -74,5 +79,32 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
+
+    <TextView
+        android:id="@+id/passwordChangeDescriptionText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
+        android:text="비밀번호를 잊으셨나요?"
+        android:fontFamily="@font/nanummyeongjo"
+        android:textColor="@color/dimGreyColor"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
+        app:layout_constraintStart_toStartOf="@+id/loginBtn" />
+
+    <TextView
+        android:id="@+id/passwordChangeLinkText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:fontFamily="@font/nanummyeongjo"
+        android:text="비밀번호찾기"
+        android:textColor="@color/dimGreyColor"
+        android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="@+id/passwordChangeDescriptionText"
+        app:layout_constraintStart_toEndOf="@+id/passwordChangeDescriptionText"
+        app:layout_constraintTop_toTopOf="@+id/passwordChangeDescriptionText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
