--- a/TTogilgi/app/src/main/res/layout/activity_main.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:itemTextAppearance="@font/nanumbarunpenb"
+        app:itemTextAppearance="@style/NaviItemFont"
         app:headerLayout="@layout/navi_header"
         app:menu="@menu/navi_menu" />
 
