--- a/TTogilgi/app/src/main/res/layout/activity_password_change.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_password_change.xml
@@ -6,6 +6,7 @@
 
     <EditText
         android:id="@+id/currentPasswordEdit"
+        android:fontFamily="@font/nanummyeongjo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
@@ -18,6 +19,7 @@
 
     <EditText
         android:id="@+id/newPassword1Edit"
+        android:fontFamily="@font/nanummyeongjo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -30,6 +32,7 @@
 
     <EditText
         android:id="@+id/newPassword2Edit"
+        android:fontFamily="@font/nanummyeongjo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -42,6 +45,7 @@
 
     <Button
         android:id="@+id/changeRequestBtn"
+        android:fontFamily="@font/nanummyeongjo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -55,6 +59,7 @@
 
     <Button
         android:id="@+id/goBackBtn"
+        android:fontFamily="@font/nanummyeongjo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
