--- a/TTogilgi/app/src/main/res/layout/activity_username_change.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_username_change.xml
@@ -8,6 +8,7 @@
 
     <EditText
         android:id="@+id/newUsernameEdit"
+        android:fontFamily="@font/nanummyeongjo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="250dp"
@@ -20,6 +21,7 @@
 
     <Button
         android:id="@+id/changeRequestBtn"
+        android:fontFamily="@font/nanummyeongjo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -32,6 +34,7 @@
 
     <Button
         android:id="@+id/goBackBtn"
+        android:fontFamily="@font/nanummyeongjo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
