--- a/TTogilgi/app/src/main/res/values/styles.xml
+++ b/TTogilgi/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
-        <item name="colorAccent">@color/orangeColor</item>
+        <item name="colorAccent">@color/liteBrownColor</item>
     </style>
 
     <style name="Date_TextView_style">
@@ -13,19 +13,9 @@
         <item name="android:textSize">13sp</item>
         <item name="android:gravity">bottom</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/nanumsquareroundr</item>
+        <item name="fontFamily">@font/nanummyeongjo</item>
         <item name="android:textColor">@color/brownColor</item>
         <item name="android:text"> 0418 </item>
-    </style>
-
-    <style name="Time_TextView_style">
-        <item name="android:maxLines">1</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:gravity">bottom</item>
-        <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/nanumsquareroundr</item>
-        <item name="android:textColor">@color/brownColor</item>
-        <item name="android:text"> 07:50 </item>
     </style>
 
     <style name="DayOfTheWeek_TextView_style">
@@ -33,7 +23,7 @@
         <item name="android:textSize">13sp</item>
         <item name="android:gravity">bottom</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/nanumsquareroundr</item>
+        <item name="fontFamily">@font/nanummyeongjo</item>
         <item name="android:textColor">@color/brownColor</item>
         <item name="android:text"> WED </item>
     </style>
@@ -42,7 +32,7 @@
         <item name="android:textSize">13sp</item>
         <item name="android:gravity">bottom</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/nanumsquareroundr</item>
+        <item name="fontFamily">@font/nanummyeongjo</item>
         <item name="android:textColor">@color/brownColor</item>
         <item name="android:maxLines">2</item>
         <item name="android:ellipsize">end</item>
@@ -55,7 +45,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:gravity">top</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/nanumsquareroundr</item>
+        <item name="fontFamily">@font/nanummyeongjo</item>
         <item name="android:textColor">@color/brownColor</item>
         <item name="android:maxLines">100</item>
         <item name="android:ellipsize">end</item>
@@ -63,10 +53,10 @@
     </style>
 
     <style name="Edit_And_Detail_Title_TextView_style">
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:gravity">top</item>
         <item name="android:textStyle">bold</item>
-        <item name="fontFamily">@font/nanumpen</item>
+        <item name="fontFamily">@font/nanummyeongjo</item>
         <item name="android:textColor">@color/brownColor</item>
         <item name="android:maxLines">100</item>
         <item name="android:ellipsize">end</item>
@@ -86,18 +76,23 @@
     </style>
 
     <style name="GraphTabLayoutStyle" parent="@android:style/TextAppearance.Widget.TabWidget">
-        <item name="fontFamily">@font/nanumbarunpenb</item>
+        <item name="fontFamily">@font/nanummyeongjo</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="tabIndicatorColor">@color/brownColor</item>
         <item name="tabTextColor">@color/liteGreyColor</item>
-        <item name="tabSelectedTextColor">@color/brownColor</item>
     </style>
 
     <style name="WeatherDescriptionTextStyle">
-        <item name="android:textSize">24sp</item>
-        <item name="fontFamily">@font/nanumpen</item>
+        <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/nanummyeongjo</item>
         <item name="android:textColor">@color/brownColor</item>
         <item name="android:text"> Contents </item>
+    </style>
+
+    <style name="NaviItemFont" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/brownColor</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/nanummyeongjo</item>
     </style>
 </resources>
