1. 감정 그래프 컬러 심리학 색상에 맞춰서 변경 2. 앱서랍 메뉴에 계정 삭제 추가

--- a/TTogilgi/app/src/main/res/menu/navi_menu.xml
+++ b/TTogilgi/app/src/main/res/menu/navi_menu.xml
@@ -18,6 +18,10 @@
             android:checkable="false"
             android:id="@+id/nav_logout"
             android:title="로그아웃" />
+        <item
+            android:checkable="false"
+            android:id="@+id/nav_delete_user"
+            android:title="계정 삭제" />
     </group>
 
 </menu>
