1. 메인 화면 or 로그아웃 후 뒤로가기 버튼 클릭 시 앱이 정상 종료되도록 코드 수정 2. IntroActivity에서 MainActivity로 넘어갈 때 IntroActivity에서 finish() 호출하도록 수정 2. 로그인 뷰 비밀번호 찾기 텍스트 위치 & 크기 수정

--- a/TTogilgi/app/src/main/res/layout/activity_login.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_login.xml
@@ -84,27 +84,28 @@
         android:id="@+id/passwordChangeDescriptionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
         android:layout_marginBottom="80dp"
-        android:text="비밀번호를 잊으셨나요?"
         android:fontFamily="@font/nanummyeongjo"
+        android:text="비밀번호를 잊으셨나요?"
         android:textColor="@color/dimGreyColor"
-        android:textSize="14sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
-        app:layout_constraintStart_toStartOf="@+id/loginBtn" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/passwordChangeLinkText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="80dp"
         android:fontFamily="@font/nanummyeongjo"
         android:text="비밀번호찾기"
         android:textColor="@color/dimGreyColor"
-        android:textSize="11sp"
-        app:layout_constraintBottom_toBottomOf="@+id/passwordChangeDescriptionText"
-        app:layout_constraintStart_toEndOf="@+id/passwordChangeDescriptionText"
-        app:layout_constraintTop_toTopOf="@+id/passwordChangeDescriptionText" />
+        android:textSize="9sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/passwordChangeDescriptionText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
