1. 일기 상세 화면 -> 감정 글귀 변경 2. 로그인 화면 -> 비밀번호 찾기 위치 수정

--- a/TTogilgi/app/src/main/res/layout/activity_detail.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_detail.xml
@@ -36,12 +36,15 @@
     <TextView
         android:id="@+id/emotionText"
         style="@style/Edit_And_Detail_Title_TextView_style"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:text="감정에 대한 글"
         app:layout_constraintBottom_toBottomOf="@+id/emotionImage"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/emotionImage"
         app:layout_constraintTop_toTopOf="@+id/emotionImage" />
 
