--- a/TTogilgi/app/src/main/res/layout/activity_login.xml
+++ b/TTogilgi/app/src/main/res/layout/activity_login.xml
@@ -84,15 +84,13 @@
         android:id="@+id/passwordChangeDescriptionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
         android:layout_marginBottom="80dp"
         android:fontFamily="@font/nanummyeongjo"
         android:text="비밀번호를 잊으셨나요?"
         android:textColor="@color/dimGreyColor"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/loginBtn" />
 
     <TextView
         android:id="@+id/passwordChangeLinkText"
