--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -59,6 +59,7 @@
 
     <EditText
         android:id="@+id/contentEdit"
+        android:background="@null"
         style="@style/Contents_TextView_style"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -67,7 +68,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,5 +105,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
+
+    <TextView
+        android:id="@+id/yearView"
+        style="@style/DayOfTheWeek_TextView_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="'20"
+        app:layout_constraintEnd_toEndOf="@+id/contentEdit"
+        app:layout_constraintTop_toBottomOf="@+id/contentEdit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
