1. 닉네임 변경 오류 수정 -> 닉네임 변경 후 쿠키를 삭제하고 로그아웃 시킨 후 로그인창으로 이동하도록 변경 2. 튜토리얼 이미지 변경

--- a/app/src/main/res/layout/activity_username_change.xml
+++ b/app/src/main/res/layout/activity_username_change.xml
@@ -21,29 +21,37 @@
 
     <Button
         android:id="@+id/changeRequestBtn"
-        android:fontFamily="@font/nanummyeongjo"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:backgroundTint="@color/colorPrimary"
+        android:fontFamily="@font/nanummyeongjo"
         android:text="변경신청"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/centerGuideline"
+        app:layout_constraintStart_toStartOf="@+id/newUsernameEdit"
         app:layout_constraintTop_toBottomOf="@+id/newUsernameEdit" />
 
     <Button
         android:id="@+id/goBackBtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="@color/colorPrimary"
         android:fontFamily="@font/nanummyeongjo"
+        android:text="돌아가기"
+        app:layout_constraintEnd_toEndOf="@+id/newUsernameEdit"
+        app:layout_constraintStart_toStartOf="@+id/centerGuideline"
+        app:layout_constraintTop_toBottomOf="@+id/newUsernameEdit" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/centerGuideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="돌아가기"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/changeRequestBtn"
-        app:layout_constraintTop_toBottomOf="@+id/newUsernameEdit" />
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
